nenolod     2005/11/29 00:42:00 UTC	(20051129-3989)
  Log:
  unsigned char fixes -- crazy bugged us about it.

  Changes:	Modified:
  +3 -3		trunk/src/node.c (File Modified) 
  +4 -4		trunk/src/pmodule.c (File Modified) 


nenolod     2005/11/29 00:13:48 UTC	(20051129-3987)
  Log:
  Deny use of invalid character '@' in a vhost. This needs to be tested and immediately backported to the release branch.
  

  Changes:	Modified:
  +6 -0		trunk/modules/nickserv/vhost.c (File Modified) 
  +6 -0		trunk/modules/userserv/vhost.c (File Modified) 


jilles      2005/11/27 21:37:09 UTC	(20051127-3983)
  Log:
  Don't add newlines on loaded memos.
  
  Tracker #80 (blank lines in flatfile db caused by memoserv).
  

  Changes:	Modified:
  +1 -1		trunk/backend/flatfile.c (File Modified) 


jilles      2005/11/26 02:32:23 UTC	(20051126-3981)
  Log:
  Interpret ENCAP REALHOST as sent by charybdis 1.0.3.
  

  Changes:	Modified:
  +10 -0	trunk/protocol/charybdis.c (File Modified) 


jilles      2005/11/26 01:35:34 UTC	(20051126-3979)
  Log:
  Add FNC wrapper:
  E void (*fnc_sts)(user_t *source, user_t *u, char *newnick, int type);
  type is FNC_REGAIN for giving a user their registered nick back,
  FNC_FORCE for forcing a user off their nick.
  Only for charybdis, hyperion and bahamut for now.
  

  Changes:	Modified:
  +4 -0		trunk/include/atheme.h (File Modified) 
  +2 -0		trunk/include/phandler.h (File Modified) 
  +7 -0		trunk/protocol/bahamut.c (File Modified) 
  +11 -0	trunk/protocol/charybdis.c (File Modified) 
  +8 -0		trunk/protocol/hyperion.c (File Modified) 
  +7 -0		trunk/src/phandler.c (File Modified) 


nenolod     2005/11/25 20:12:20 UTC	(20051125-3975)
  Log:
  Duplicate check for other SJOIN variant

  Changes:	Modified:
  +11 -6	trunk/protocol/unreal.c (File Modified) 


nenolod     2005/11/25 20:08:47 UTC	(20051125-3973)
  Log:
  UnrealIRCd ban-burst fix.

  Changes:	Modified:
  +4 -1		trunk/protocol/unreal.c (File Modified) 

